force-app/main/default/objects/Role_Assignment__c/Role_Assignment__c.object-meta.xml
<CustomObject>
    <label>Role Assignment</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Role Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>