force-app/main/default/objects/Role_Assignment__c/fields/Additional_Roles__c.field-meta.xml
<CustomField>
    <fullName>Additional_Roles__c</fullName>
    <label>Additional Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Raico_Roles</valueSetName>
    </valueSet>
</CustomField>