force-app/main/default/objects/Role_Assignment__c/fields/Objecttype__c.field-meta.xml
<CustomField>
    <fullName>Objecttype__c</fullName>
    <label>Objecttype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Building Project</fullName>
                <isActive>false</isActive>
                <label>Building Project</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
                <isActive>false</isActive>
                <label>Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>