force-app/main/default/objects/Role_Assignment__c/fields/PrimaryRole__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRole__c</fullName>
    <label>Primary Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Raico_Roles</valueSetName>
    </valueSet>
</CustomField>