force-app/main/default/objects/Role_Assignment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Fabricator</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
                <isActive>false</isActive>
                <label>Architect</label>
            </value>
            <value>
                <fullName>Planner</fullName>
                <isActive>false</isActive>
                <label>Planner</label>
            </value>
            <value>
                <fullName>Processor</fullName>
                <isActive>false</isActive>
                <label>Processor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>